--- a/src/main.css
+++ b/src/main.css
@@ -12,7 +12,7 @@ body {
 }
 
 .search-container {
-    background: rgb(223, 245, 236);
+
     display: flex;
     flex-direction: column;
     width: 700px;
@@ -23,28 +23,15 @@ body {
     overflow: hidden;
 }
 
-.header {
-    width: 100%;
-    height: 90px;
-    display: flex;
-    align-items: center;
-    background: rgb(100, 255, 173);
-    border-bottom: 3px solid #fff;
-}
 
-.header>h1 {
-    color: rgb(0, 158, 250);
-    font-size: 2.5rem;
-    margin-left: 25px;
-    border-radius: 10px;
-
-}
 
 .search-panel {
     width: 100%;
-    height: 120px;
+    height: fit-content;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    padding: 20px 0px;
     justify-content: center;
     background: rgb(100, 255, 173);
 }
